syntax = "proto3";
package liubaninc.m0.wasm;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "wasm/ext.proto";
import "wasm/contract.proto";
import "utxo/input.proto";
import "xmodel/xmodel.proto";


option go_package = "github.com/liubaninc/m0/x/wasm/types";

// Query defines the gRPC querier service.
service Query {
  //预执行合约
  rpc PreExec(InvokeRPCRequest) returns (InvokeRPCResponse) {
    option (google.api.http) = {
      post: "/liubaninc/m0/wasm/preexec"
      body: "*"
    };
  }

  rpc Contract(QueryGetContractRequest) returns (QueryGetContractResponse) {
      option (google.api.http).get = "/liubaninc/m0/wasm/contract/{name}";
  }

  rpc ContractAll(QueryAllContractRequest) returns (QueryAllContractResponse) {
      option (google.api.http).get = "/liubaninc/m0/wasm/contract";
  }

  rpc AccountContractAll(QueryGetAccountAllContractRequest) returns (QueryGetAccountAllContractResponse) {
      option (google.api.http).get = "/liubaninc/m0/wasm/contract/account/{name}";
  }
}

message InvokeRPCRequest {
  string creator = 1;
  int64  lock = 2;
  repeated InvokeRequest requests = 3;
}

message InvokeRPCResponse {
  repeated utxo.Input inputs = 1;
  repeated utxo.Output outputs = 2;
  repeated InputExt inputsExt = 3;
  repeated OutputExt outputsExt = 4;
  repeated bytes response = 5;
  int64 gas_used = 6;
  repeated InvokeRequest requests = 7;
  repeated xmodel.ContractResponse responses = 8;
}

message QueryGetContractRequest {
	string name = 1;
}

message QueryGetContractResponse {
	Contract contract = 1;
}

message QueryGetAccountAllContractRequest {
	string name = 1;
	cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryGetAccountAllContractResponse {
	repeated Contract contract = 1;
    cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryAllContractRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllContractResponse {
	repeated Contract contract = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}